[tool.poetry]
name = "ppsql"
version = "0.2.0"
description = "A package for printing Django & SQLAlchemy ORM SQL-like statements"
authors = ["Tim McFadden <tim@timandjamie.com>"]

[tool.poetry.dependencies]
sqlparse = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "^1.18"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
